<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.starhood.udacity3_remake.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="#fff5cc"
               android:gravity="center"
               android:id="@+id/view_layout"
               android:visibility="invisible"
               android:orientation="horizontal">

               <View
                   android:id="@+id/v1"
                   style="@style/view_style"></View>

               <View
                   style="@style/view_style"
                   android:id="@+id/v2"></View>

               <View
                   style="@style/view_style"
                   android:id="@+id/v3"></View>

               <View
                   style="@style/view_style"
                   android:id="@+id/v4"></View>

               <View
                   style="@style/view_style"
                   android:id="@+id/v5"></View>

               <View
                   style="@style/view_style"
                   android:id="@+id/v6"></View>



           </LinearLayout>


           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               >

               <LinearLayout
                   style="@style/layout_style"
                   android:id="@+id/start_test_layout">

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/startup_quote"
                       android:textSize="30sp"
                       android:textColor="#000000"
                       android:textStyle="bold"
                       android:gravity="center"
                       android:layout_gravity="center_vertical"/>

                   <Button
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_margin="40dp"
                       android:layout_gravity="center"
                       android:text="@string/startup_buttom"
                       android:textSize="18dp"
                       android:onClick="startQuiz"
                       android:background="#ff9900"
                       android:id="@+id/start"/>

               </LinearLayout>

               <LinearLayout
                   style="@style/layout_style"
                   android:visibility="invisible"
                   android:id="@+id/first_question_layout">

                   <TextView
                       android:text="@string/first_Question_title"
                       style="@style/titles"
                       />

                   <TextView
                       android:text="@string/first_Question"
                       style="@style/questions"/>

                   <EditText
                       style="@style/edit_text_style"
                       android:id="@+id/first_question_answer"/>


               </LinearLayout>

               <LinearLayout
                   style="@style/layout_style"
                    android:visibility="invisible"
                   android:id="@+id/Second_question_layout">

                   <TextView
                       android:text="@string/second_Question_title"
                       style="@style/titles"
                       />

                   <TextView
                       android:text="@string/Second_Question"
                       style="@style/questions"/>

                   <EditText
                       style="@style/edit_text_style"
                       android:id="@+id/second_question_answer"/>


               </LinearLayout>

               <LinearLayout
                   style="@style/layout_style"
                    android:visibility="invisible"
                   android:id="@+id/third_question_layout">

                   <TextView
                       android:text="@string/third_Question_title"
                       style="@style/titles"
                       />

                   <TextView
                       android:text="@string/third_Question"
                       style="@style/questions"/>

                   <RadioGroup
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/Q3RG"
                       android:layout_marginTop="14dp">

                       <RadioButton
                           style="@style/radio_checkbox_style"
                           android:id="@+id/Q3R1"
                           android:text="@string/third_question_radio1"
                           />
                       <RadioButton
                           style="@style/radio_checkbox_style"
                           android:id="@+id/Q3R2"
                           android:text="@string/third_question_radio2"
                           />
                       <RadioButton
                           style="@style/radio_checkbox_style"
                           android:id="@+id/Q3R3"
                           android:text="@string/third_question_radio3"
                           />

                   </RadioGroup>



               </LinearLayout>

               <LinearLayout
                   style="@style/layout_style"
                    android:visibility="invisible"
                   android:id="@+id/fourth_question_layout">

                   <TextView
                       android:text="@string/fourth_Question_title"
                       style="@style/titles"
                       />

                   <TextView
                       android:text="@string/Fourth_Question"
                       style="@style/questions"/>

                   <RadioGroup
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/Q4RG"
                       android:layout_marginTop="14dp">

                       <RadioButton
                           style="@style/radio_checkbox_style"
                           android:id="@+id/Q4R1"
                           android:text="@string/fourth_question_radio1"
                           />
                       <RadioButton
                           style="@style/radio_checkbox_style"
                           android:id="@+id/Q4R2"
                           android:text="@string/fourth_question_radio2"
                           />
                       <RadioButton
                           style="@style/radio_checkbox_style"
                           android:id="@+id/Q4R3"
                           android:text="@string/fourth_question_radio3"
                           />

                   </RadioGroup>



               </LinearLayout>

               <LinearLayout
                   style="@style/layout_style"
                    android:visibility="invisible"
                   android:id="@+id/fifth_question_layout">

                   <TextView
                       android:text="@string/fifth_Question_title"
                       style="@style/titles"
                       />

                   <TextView
                       android:text="@string/fifth_Question"
                       style="@style/questions"/>

                       <CheckBox
                           style="@style/radio_checkbox_style"
                           android:id="@+id/Q5CB1"
                           android:text="@string/fifth_question_CB1"
                           />
                       <CheckBox
                           style="@style/radio_checkbox_style"
                           android:id="@+id/Q5CB2"
                           android:text="@string/fifth_question_CB2"
                           />
                       <CheckBox
                           style="@style/radio_checkbox_style"
                           android:id="@+id/Q5CB3"
                           android:text="@string/fifth_question_CB3"
                           />

               </LinearLayout>

               <LinearLayout
                   style="@style/layout_style"
                   android:visibility="invisible"
                   android:id="@+id/sixth_question_layout">

                   <TextView
                       android:text="@string/sixth_Question_title"
                       style="@style/titles"
                       />

                   <TextView
                       android:text="@string/sixth_Question"
                       style="@style/questions"/>

                   <CheckBox
                       style="@style/radio_checkbox_style"
                       android:id="@+id/Q6CB1"
                       android:text="@string/sixth_question_CB1"
                       />
                   <CheckBox
                       style="@style/radio_checkbox_style"
                       android:id="@+id/Q6CB2"
                       android:text="@string/sixth_question_CB2"
                       />
                   <CheckBox
                       style="@style/radio_checkbox_style"
                       android:id="@+id/Q6CB3"
                       android:text="@string/sixth_question_CB3"
                       />

               </LinearLayout>

           </RelativeLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <Button
                   android:layout_width="140dp"
                   android:layout_height="65dp"
                   android:layout_gravity="center"
                   android:text="@string/submit_buttom"
                   android:visibility="invisible"
                   android:id="@+id/submit_button"
                   android:background="#ff9900"
                   android:textStyle="bold"
                   android:textSize="24sp"
                   android:onClick="buttonClicked"

                   />

           </LinearLayout>

       </LinearLayout>

    </ScrollView>

</LinearLayout>
